; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mscms/extr_profile.c_strdupW.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mscms/extr_profile.c_strdupW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64)* @strdupW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @strdupW(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  store i32* null, i32** %3, align 8
  %5 = load i64, i64* %2, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %25

7:                                                ; preds = %1
  %8 = load i32, i32* @CP_ACP, align 4
  %9 = load i64, i64* %2, align 8
  %10 = call i32 @MultiByteToWideChar(i32 %8, i32 0, i64 %9, i32 -1, i32* null, i32 0)
  store i32 %10, i32* %4, align 4
  %11 = call i32 (...) @GetProcessHeap()
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = mul i64 %13, 4
  %15 = trunc i64 %14 to i32
  %16 = call i32* @HeapAlloc(i32 %11, i32 0, i32 %15)
  store i32* %16, i32** %3, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %7
  %19 = load i32, i32* @CP_ACP, align 4
  %20 = load i64, i64* %2, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @MultiByteToWideChar(i32 %19, i32 0, i64 %20, i32 -1, i32* %21, i32 %22)
  br label %24

24:                                               ; preds = %18, %7
  br label %25

25:                                               ; preds = %24, %1
  %26 = load i32*, i32** %3, align 8
  ret i32* %26
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i64, i32, i32*, i32) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
